# qrlab3

./: .config.py.un~  .create_instruments.py.un~  .env.example  .gitignore  .mclient.py.un~  .start.bat.un~  .start_dataserver.bat.un~  .start_instrumentgui.bat.un~  .start_instrumentserver.bat.un~  .test - VNA.py.un~  0815_hanger_magshield_cold  AugustusII_measurements_6.py  Brute_force_IO_trace_fitting  Brute_force_IO_trace_fitting.py  Circulator_performance.py  Circulator_with_subtraction.py  FMR_RT_async_test.py  FMR_graph.py  Genetic_fitting_4x4_matrix.py  IO_trace_comparison_fitting.py  IO_trace_comparison_single_fitting.py  I_Q_readout_info.py  Linewidth_analysis_mag_sweep  Linewidth_analysis_mag_sweep.py  Numerical_S21_integration_reader.py  OPENTASKS  Phase_diff_max.py  QRLab.bat  Q_data_fitting.py  Qubit_to_cavity_chi_theory.py  S33 (Res)  S33 (open)  SSwithdemag.py  T1_Ypoints_coarse.txt  TWPA_data_analysis  TWPA_data_analysis.py  VNA get data.py  VNA_datapull.py  VNA_get_graph.py  VNA_single_trace.py  (+88 more)
FMR/: .FMR_RT_async.py.un~  .peak_and_dip_detect.py.swp  0628.py  20210105_result_plot.py  289.0mT.txt  290.0mT.txt  291.0mT.txt  292.0mT.txt  2x2_matrix_fitting_scipy.py  FMR plot subtract first trace.py  FMR_RT_(volts).py  FMR_RT_Current.py  FMR_RT_async.py  FMR_RT_async.py~  FMR_graph.py  FMR_graph_fridge.py  FMR_parameters.py  FMR_params_for_traces.py  Mag_sweep_traces.py  Magneostatic_Mode_Analysis  for traces in a  folder.py  Magneostatic_Mode_Analysis for colorplot file.py  Power sweep VNA for several modes.py  Power sweep VNA.py  RT Measurementscalibrated_1  (+117 more)
(+1815 files in other folders)
